# patrikja.github.io

./: README.md  index.html
myblog/: archive.html  index.html  myblog.cabal
myblog/posts/: 2016-04-04-setup.html  2016-04-04-setup.markdown  2016-04-06-reproducibility.html  2016-04-06-reproducibility.markdown
